# pi-bt-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml  set-pools-drain-eu-de-1.sh
.opencode/plans/: direwolf-integration-design.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/bt_hub/: __init__.py  config.py  deps.py  lifecycle.py  main.py  routers.py
backend/src/bt_hub/api/: __init__.py  adapter.py  bridge.py  devices.py  logs.py  settings.py  websocket.py
backend/src/bt_hub/models/: __init__.py  device.py  settings.py
backend/src/bt_hub/services/: __init__.py  bluetooth.py  bridge_proxy.py  bt_agent.py  bt_bridge_client.py  device_store.py  event_bus.py  log_handler.py  systemd_service.py
backend/src/bt_hub/templates/: base.html  device.html  devices.html  index.html  logs.html  scan.html  settings.html
backend/src/bt_hub/templates/bridge/: stats.html  status.html  tnc.html
backend/src/bt_hub/templates/partials/: bridge_service_status.html  device_card.html  device_filter_buttons.html  device_row.html  favorite_button_detail.html  ignored_button_detail.html  scan_progress.html  scan_stopped.html  status_badge.html  toast.html
backend/src/static/css/: main.css  theme.css
docs/: INSTALL.md
docs/superpowers/specs/: 2026-03-20-bridge-service-control-design.md
systemd/: bt-hub-bridge.conf  bt-hub.service
tests/: conftest.py
tests/api/: test_adapter_api.py  test_bridge_api.py  test_devices_api.py  test_settings_api.py
tests/integration/: test_bridge_conditional.py  test_device_lifecycle.py  test_websocket_events.py
tests/unit/: test_bluetooth_service.py  test_bridge_proxy.py  test_bt_bridge_client.py  test_config.py  test_device_models.py  test_device_store.py  test_lifecycle.py  test_log_handler.py  test_routers.py
